...
                app:layout_constraintBottom_toTopOf="@+id/radioGroupNbPlayers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenTitle" />

        <RadioGroup
                android:checkedButton="@id/radioButton4players"
                android:id="@+id/radioGroupNbPlayers"
                app:layout_constraintTop_toBottomOf="@+id/labelNbPlayers"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerOneName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenRadioGroup">
            <RadioButton
                    android:text="@string/three_players_mode"
                    android:id="@+id/radioButton3players"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="@{() -> mainViewModel.updateNbPlayer(3)}"
                    style="@style/mainScreenRadioButton" />
...
                    style="@style/mainScreenRadioButton"/>
        </RadioGroup>

        <TextView
                android:text="@string/player_one"
                android:id="@+id/labelPlayerOneName"
                android:labelFor="@id/editPlayerOneName"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupNbPlayers"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerTwoName"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerOneName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

...
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenEditText" />

        <TextView
                android:text="@string/player_two"
                android:id="@+id/labelPlayerTwoName"
                android:labelFor="@id/editPlayerTwoName"
                app:layout_constraintTop_toBottomOf="@+id/labelPlayerOneName"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerThreeName"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerTwoName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

...
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenEditText" />

        <TextView
                android:text="@string/player_three"
                android:id="@+id/labelPlayerThreeName"
                android:labelFor="@id/editPlayerThreeName"
                app:layout_constraintTop_toBottomOf="@+id/labelPlayerTwoName"
                app:layout_constraintBottom_toTopOf="@+id/labelPlayerFourName"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerThreeName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

...
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/mainScreenEditText" />

        <TextView
                android:text="@string/player_four"
                android:id="@+id/labelPlayerFourName"
                android:labelFor="@id/editPlayerFourName"
                android:visibility="@{mainViewModel.playerFourVisibility}"
                app:layout_constraintTop_toBottomOf="@+id/labelPlayerThreeName"
                app:layout_constraintBottom_toTopOf="@+id/buttonStartGame"
                app:layout_constraintEnd_toStartOf="@+id/editPlayerFourName"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/mainScreenTextView" />

        <EditText
                android:text="@={mainViewModel.playerFourName}"
...
