<resources>
    <string name="app_name">Gang Of Four - Scoreboard</string>
    <string name="app_header">GOF - Scoreboard</string>
    <string name="enter_players_names">Enter players names.</string>
    <string name="duplicate_players_names">Player names must be unique.</string>
    <string name="enter_players_scores">Enter players scores.</string>
    <string name="enter_valid_players_scores">Enter scores between 0 and 16.</string>
    <string name="only_one_winner_on_round">A single player must have 0 point.</string>
    <string name="enter_scores_explanation">Enter the number of cards left when round ends.</string>
    <string name="nb_cards_left_p1_description">Number of cards left for player 1</string>
    <string name="nb_cards_left_p2_description">Number of cards left for player 2</string>
    <string name="nb_cards_left_p3_description">Number of cards left for player 3</string>
    <string name="nb_cards_left_p4_description">Number of cards left for player 4</string>
    <string name="valid_button">Valid</string>
    <string name="delete_previous_scores_round_button">Remove last\n round scores</string>
    <string name="previous_scores_round_deleted">Last round scores have been removed.</string>
    <string name="number_of_players">Number of players</string>
    <string name="three_players_mode">3</string>
    <string name="four_players_mode">4</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 3</string>
    <string name="player_four">Player 4</string>
    <string name="player_name_hint">Name</string>
    <string name="name_p1_description">Name player 1</string>
    <string name="name_p2_description">Name player 2</string>
    <string name="name_p3_description">Name player 3</string>
    <string name="name_p4_description">Name player 4</string>
    <string name="start_game_button">Start game</string>
    <string name="game_over_dialog_title">Game over</string>
    <string name="game_over_dialog_message">%1$s won with %2$d points !\n\nRanking :\n\n</string>
    <string name="no_score_to_delete">There is no score to remove.</string>
    <string name="delete_score_dialog_title">Remove scores</string>
    <string name="delete_score_dialog_message">Are you sure you want to remove last round scores ?</string>
    <string name="back_to_main_screen_dialog_title">Back to homepage</string>
    <string name="back_to_main_screen_dialog_message">Are you sure you want to give up the current game and go back to homepage ?</string>
    <string name="back_to_main_screen_game_ended_dialog_message">Are you sure you want to go back to homepage ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back_main_screen_button">Back to homepage</string>
    <string name="new_game">New game</string>
    <string name="new_game_message">Are you sure you want to start a new game ?</string>
    <string name="save_game">Save game</string>
    <string name="load_saved_game">Load saved game</string>
    <string name="no_saved_game_message">There is no saved game</string>
    <string name="back_to_scoreboard">Back to scoreboard</string>
    <string name="generic_error_message">An error has occurred</string>
    <string name="points_label">pts</string>
    <string name="game_saved_message">Game saved</string>
    <string name="game_saving_error_message">An error occurred when saving game, please try again</string>
    <string name="privacy">Privacy policy</string>
</resources>